Changelog for Audio-MPD

{{$NEXT}}
 - fix rt#68357 - ipv6 support
 - fix rt#71201 - url handlers can vary with mpd installation
 - fix rt#71202 - requiring software mixer for tests

1.112670  2011-09-24 11:40:44 Europe/Paris
 - collection: new method all_genres (sebastien nobili)
 - collection: new method artists_by_genre (sebastien nobili)

1.111200  2011-04-30 10:21:31 Europe/Paris
 - removing misleading example in pod

1.110560  2011-02-25 15:28:59 Europe/Paris
 - new command available: outputs

1.102260  2010-08-14 19:21:51 Europe/Paris
 - new script mpd-rate to rate a song / display current rating

1.100430  2010-02-12 12:51:18 Europe/Paris
 - WARNING: no more makefile.pl supplied, only a build.pl
 - sub::exporter no more used internally

1.093170 Fri Nov 13 19:06:54 2009
 - removed no more used prereq class::accessor
 - revamped pod with podweaver
 - introducing audio::mpd::types
 - using moosex::has::sugar

1.092950 Thu Oct 22 19:34:35 2009
 - module is quite stable now, bumping to 1.yydddn version
 - migrated to moose
 - password() method renamed to set_password()
 - no more vars exported, use 'reuse' and 'once' strings for conntype

**

0.19.10 Wed Oct 21 14:20:09 2009
 - update list of static prereqs, not caught by autoprereq
 - bump min version for test-corpus-audio-mpd

0.19.9 Sun Oct 18 11:49:57 2009
 - using test::corpus::audio::mpd for tests (regains mpd 0.15.x compatibility)

0.19.8 Wed Oct 14 18:05:29 2009
 - migrated to dist-zilla (transparent for end-user)

0.19.7 Wed Sep 30 16:56:37 2009
 - fix #50109 problem with newer class::accessor

0.19.6 Sat Feb 14 13:03:22 CET 2009
 - doc update (catched by streamingmeemee)

0.19.5 Mon Jan  5 15:31:29 CET 2009
 - updated to match mpd 0.14 behaviour
 - doc update

0.19.4 Sat Aug 16 10:38:12 CEST 2008
 - doc update
 - listing mpd-dynamic script prereqs as module prereqs

0.19.3 Tue Aug 12 19:04:23 CEST 2008
 - version() reports *protocol* version, not real mpd version