@@ -11,7 +11,7 @@ repository     = http://github.com/jquelin/audio-mpd
 x_mailing_list = http://groups.google.com/group/audio-mpd
 
 [Prereqs / TestRequires]
-Test::Corpus::Audio::MPD = 1.113281    ; ipv6
+Test::Corpus::Audio::MPD = 1.113282    ; software mixer, ipv6, genre tag
 
 [@Filter]
 -bundle = @JQUELIN
