@@ -24,9 +24,9 @@ my $stats = $mpd->stats;
 isa_ok( $stats, 'Audio::MPD::Common::Stats', 'stats() returns an AMC::Stats object' );
 is( $stats->artists,      1, 'one artist in the database' );
 is( $stats->albums,       1, 'one album in the database' );
-is( $stats->songs,        4, '4 songs in the database' );
+is( $stats->songs,        5, '5 songs in the database' );
 is( $stats->playtime,     0, 'already played 0 seconds' );
-is( $stats->db_playtime,  8, '8 seconds worth of music in the db' );
+is( $stats->db_playtime, 10, '10 seconds worth of music in the db' );
 isnt( $stats->uptime, undef, 'uptime is defined' );
 isnt( $stats->db_update,  0, 'database has been updated' );
 
